# gdrive-sync

./: .gitignore  Makefile.am  README.md  TODO  configure.ac  local.mk
doc/: .gitignore  Makefile.am  gdrive-sync.1.pod  sample.gdsconfig
scripts/: .gitignore  Makefile.am  gdrive-sync.bash
src/: Makefile.am  gdrive-sync.bash
